# trashdove-desktop

./: Cargo.toml  Rocket.toml
src/: build.rs  main.rs  tests.rs  web.rs
td/: index.html
tests/: index.rs  start.rs
tests/features/: start.feature
